--- a/TPC5/views/period.pug
+++ b/TPC5/views/period.pug
@@ -8,18 +8,18 @@ block content
                 a.w3-center(href="/periodos") Voltar
 
         header.w3-half.w3-container.w3-blue-grey.w3-center
-            h3= period.id
+            h3= title
 
         .w3-quarter.flex-box.flex-center.w3-blue-grey.full-height-div
 
     main.w3-margin.w3-padding
         .w3-container.w3-center
             p
-                b Início:
+                b Início: 
                 | #{period.start}
 
             p
-                b Fim:
+                b Fim: 
                 | #{period.end}
 
         .flex-box.flex-center
