JQuery to create forms. Remaining: process form submit

--- a/Ficha_Aferição/htmlServer/public/stylesheets/style.css
+++ b/Ficha_Aferição/htmlServer/public/stylesheets/style.css
@@ -57,3 +57,15 @@ a {
 .margin-16{
   margin: 16px;
 }
+
+.height-50px{
+  height: 50px;
+}
+
+.width-50px{
+  width: 50px;
+}
+
+.width-100{
+  width: 100%;
+}
