--- a/Ficha_Aferição/htmlServer/views/add.pug
+++ b/Ficha_Aferição/htmlServer/views/add.pug
@@ -16,104 +16,149 @@ block content
                 legend Simple
                 
                 label Id
-                input.w3-input.w3-round(type="text" name="_id")
+                input.w3-border.w3-input.w3-round(type="text" name="_id")
                 br
 
                 label Nome
-                input.w3-input.w3-round(type="text" name="nome")
+                input.w3-border.w3-input.w3-round(type="text" name="nome")
                 br
 
                 label Idade
-                input.w3-input.w3-round(type="text" name="idade")
+                input.w3-border.w3-input.w3-round(type="text" name="idade")
                 br
 
                 label Sexo
-                input.w3-input.w3-round(type="text" name="sexo")
+                input.w3-border.w3-input.w3-round(type="text" name="sexo")
                 br
 
                 label Profissao
-                input.w3-input.w3-round(type="text" name="profissao")
+                input.w3-border.w3-input.w3-round(type="text" name="profissao")
                 br
 
                 label Marca Carro
-                input.w3-input.w3-round(type="text" name="marca_carro")
+                input.w3-border.w3-input.w3-round(type="text" name="marca_carro")
                 br
 
             fieldset
                 legend Address
                 
                 label Cidade
-                input.w3-input.w3-round(type="text" name="cidade")
+                input.w3-border.w3-input.w3-round(type="text" name="cidade")
                 br
 
                 label Distrito
-                input.w3-input.w3-round(type="text" name="distrito")
+                input.w3-border.w3-input.w3-round(type="text" name="distrito")
                 br
 
             fieldset
                 legend Political Partical
                 
                 label Abreviação
-                input.w3-input.w3-round(type="text" name="party_abbr")
+                input.w3-border.w3-input.w3-round(type="text" name="party_abbr")
                 br
 
                 label Nome
-                input.w3-input.w3-round(type="text" name="party_name")
+                input.w3-border.w3-input.w3-round(type="text" name="party_name")
                 br
 
             fieldset
                 legend Atributs
                 
                 label Fumador
-                input.w3-margin.w3-padding(type="checkbox" value="1" name="fumador")
+                input.w3-border.w3-margin.w3-padding(type="checkbox" value="1" name="fumador")
                 br
 
                 label Gosta Cinema
-                input.w3-margin.w3-padding(type="checkbox" value="1" name="gosta_cinema")
+                input.w3-border.w3-margin.w3-padding(type="checkbox" value="1" name="gosta_cinema")
                 br
 
                 label Gosta Viajar
-                input.w3-margin.w3-padding(type="checkbox" value="1" name="gosta_viajar")
+                input.w3-border.w3-margin.w3-padding(type="checkbox" value="1" name="gosta_viajar")
                 br
 
                 label Acorda Cedo
-                input.w3-margin.w3-padding(type="checkbox" value="1" name="acorda_cedo")
+                input.w3-border.w3-margin.w3-padding(type="checkbox" value="1" name="acorda_cedo")
                 br
 
                 label Gosta Ler
-                input.w3-margin.w3-padding(type="checkbox" value="1" name="gosta_ler")
+                input.w3-border.w3-margin.w3-padding(type="checkbox" value="1" name="gosta_ler")
                 br
 
                 label Gosta Musica
-                input.w3-margin.w3-padding(type="checkbox" value="1" name="gosta_musica")
+                input.w3-border.w3-margin.w3-padding(type="checkbox" value="1" name="gosta_musica")
                 br
 
                 label Gosta Comer
-                input.w3-margin.w3-padding(type="checkbox" value="1" name="gosta_comer")
+                input.w3-border.w3-margin.w3-padding(type="checkbox" value="1" name="gosta_comer")
                 br
 
                 label Gosta Animais Estimação
-                input.w3-margin.w3-padding(type="checkbox" value="1" name="gosta_animais_estimacao")
+                input.w3-border.w3-margin.w3-padding(type="checkbox" value="1" name="gosta_animais_estimacao")
                 br
 
                 label Gosta Dancar
-                input.w3-margin.w3-padding(type="checkbox" value="1" name="gosta_dancar")
+                input.w3-border.w3-margin.w3-padding(type="checkbox" value="1" name="gosta_dancar")
                 br
 
                 label Comida Favorita
-                input.w3-input.w3-round(type="text" name="comida_favorita")
+                input.w3-border.w3-input.w3-round(type="text" name="comida_favorita")
                 br
 
             fieldset
+                legend Descrição
 
                 .flex-box.flex-column
-                    label Descrição
                     textarea(id="descrição" name="bio" rows="10" cols="50")
                 br
 
+            fieldset 
+                legend Desportos
+
+                .flex-box
+                    .flex-box.flex-column.width-100.w3-margin(id="desportos")
+
+                    .flex-box
+                        button.height-50px.width-50px.w3-margin.w3-button.w3-round.w3-blue-grey(id="addDesporto") +
+                        button.height-50px.width-50px.w3-margin.w3-button.w3-round.w3-blue-grey(id="removeDesporto") -
+
+            fieldset 
+                legend Animais 
+
+                .flex-box 
+                    .flex-box.flex-column.width-100.w3-margin(id="animais")
+
+                    .flex-box
+                        button.height-50px.width-50px.w3-margin.w3-button.w3-round.w3-blue-grey(id="addAnimal") +
+                        button.height-50px.width-50px.w3-margin.w3-button.w3-round.w3-blue-grey(id="removeAnimal") -
+
+            fieldset 
+                legend Figura Pública
+
+                .flex-box 
+                    .flex-box.flex-column.width-100.w3-margin(id="figuras_publicas")
+
+                    .flex-box
+                        button.height-50px.width-50px.w3-margin.w3-button.w3-round.w3-blue-grey(id="addFiguraPublica") +
+                        button.height-50px.width-50px.w3-margin.w3-button.w3-round.w3-blue-grey(id="removeFiguraPublica") -
+
+            fieldset 
+                legend Destinos Favoritos
+
+                .flex-box 
+                    .flex-box.flex-column.width-100.w3-margin(id="destinos_favoritos")
+
+                    .flex-box
+                        button.height-50px.width-50px.w3-margin.w3-button.w3-round.w3-blue-grey(id="addDestinoFavorito") +
+                        button.height-50px.width-50px.w3-margin.w3-button.w3-round.w3-blue-grey(id="removeDestinoFavorito") -
+
+                
+
             .w3-margin.w3-padding.flex-box.space-evenly
-                a.w3-button.w3-round.w3-blue-grey(href="/compositores") Cancelar
+                a.w3-button.w3-round.w3-blue-grey(href="/") Cancelar
                 button.w3-button.w3-round.w3-blue-grey(type="submit") Guardar Alterações
 
     footer.w3-container.w3-blue-grey
         h5 Generated by FichaAferição::EngWeb2024::A100695 
+
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js") 
+    script(src="/javascripts/form_manipulation.js")
