Ficha aferição concluída. Falta apenas o manifesto

--- a/Ficha_Aferição/htmlServer/views/add.pug
+++ b/Ficha_Aferição/htmlServer/views/add.pug
@@ -31,7 +31,7 @@ block content
                 input.w3-border.w3-input.w3-round(type="text" name="sexo")
                 br
 
-                label Profissao
+                label Profissão
                 input.w3-border.w3-input.w3-round(type="text" name="profissao")
                 br
 
@@ -39,8 +39,12 @@ block content
                 input.w3-border.w3-input.w3-round(type="text" name="marca_carro")
                 br
 
+                label Religião
+                input.w3-border.w3-input.w3-round(type="text" name="religiao")
+                br
+
             fieldset
-                legend Address
+                legend Morada
                 
                 label Cidade
                 input.w3-border.w3-input.w3-round(type="text" name="cidade")
@@ -108,7 +112,7 @@ block content
                 legend Descrição
 
                 .flex-box.flex-column
-                    textarea(id="descrição" name="bio" rows="10" cols="50")
+                    input.w3-border.w3-input.w3-round(type="text" id="descrição" name="descricao")
                 br
 
             fieldset 
