--- a/Ficha_Aferição/htmlServer/views/athlet.pug
+++ b/Ficha_Aferição/htmlServer/views/athlet.pug
@@ -97,7 +97,7 @@ block content
                 li= obj
 
 
-        p Descrição: #{data['descrição']}
+        p Descrição: #{data.descricao}
 
 
     footer.w3-container.w3-blue-grey
